# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "midlearn"
version = "0.1.3"
authors = [
  { name="Ryoichi Asashiba", email="ryoichi.asashiba@gmail.com" },
]
description = "Python Wrapper of the 'midr' R package to interpret black-box models."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "rpy2>=3.5.0",
    "plotnine",
    "mizani"
]

[project.urls]
Issues = "https://github.com/ryo-asashi/midlearn/issues"